Update Dependabot config to fix directory and formatting issues

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,14 +6,15 @@
 version: 2
 updates:
   - package-ecosystem: "gomod"
-    directory: "/" # Location of package manifests
+    directory: "**/*"
     labels:
       - "🤖 Dependencies"
     schedule:
       interval: "daily"
+
   - package-ecosystem: "github-actions"
     directory: "/"
-    schedule: 
+    schedule:
       interval: daily
-    labels: 
-     - "🤖 Dependencies"
+    labels:
+      - "🤖 Dependencies"
