--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,37 +1,50 @@
-name-template: "{{FOLDER}} v$RESOLVED_VERSION"
+name-template: "{{FOLDER}} - v$RESOLVED_VERSION"
 tag-template: "{{FOLDER}}/v$RESOLVED_VERSION"
 tag-prefix: "{{FOLDER}}/v"
 include-paths:
-  - "{{FOLDER}}"
-
+  - "{{ FOLDER }}"
 categories:
   - title: "❗ Breaking Changes"
-    labels: ["❗ BreakingChange"]
+    labels:
+      - "❗ BreakingChange"
   - title: "🚀 New"
-    labels: ["✏️ Feature"]
+    labels:
+      - "✏️ Feature"
   - title: "🧹 Updates"
-    labels: ["🧹 Updates", "🤖 Dependencies"]
+    labels:
+      - "🧹 Updates"
+      - "🤖 Dependencies"
   - title: "🐛 Fixes"
-    labels: ["☢️ Bug"]
-  - title: "📚 Docs"
-    labels: ["📒 Documentation"]
-
+    labels:
+      - "☢️ Bug"
+  - title: "📚 Documentation"
+    labels:
+      - "📒 Documentation"
 change-template: "- $TITLE (#$NUMBER)"
-change-title-escapes: '\<*_&'
-exclude-contributors: ["dependabot", "dependabot[bot]"]
-
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+exclude-contributors:
+  - dependabot
+  - dependabot[bot]
 version-resolver:
   major:
-    labels: ["major", "❗ BreakingChange"]
+    labels:
+      - "major"
+      - "❗ BreakingChange"
   minor:
-    labels: ["minor", "✏️ Feature"]
+    labels:
+      - "minor"
+      - "✏️ Feature"
   patch:
-    labels: ["patch", "📒 Documentation", "☢️ Bug", "🤖 Dependencies", "🧹 Updates"]
+    labels:
+      - "patch"
+      - "📒 Documentation"
+      - "☢️ Bug"
+      - "🤖 Dependencies"
+      - "🧹 Updates"
   default: patch
-
 template: |
   $CHANGES
 
-  **Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...{{FOLDER}}/v$RESOLVED_VERSION
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...{{FOLDER}}/v$RESOLVED_VERSION
 
-  Thanks $CONTRIBUTORS!
+  Thank you $CONTRIBUTORS for making this update possible.
