--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,6 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Use dynamic release-drafter configuration
-        uses: ReneWerner87/release-drafter@6dec4ceb1fb86b6514f11a2e7a39e1dedce709d0
+        uses: release-drafter/release-drafter@v6
         with:
           config: ${{ steps.generate-config.outputs.config }}
